@@ -72,6 +72,10 @@ struct write_ret_t {
   write_ret_t(bool a, std::string const& id, std::vector<apply_ret_t> const& app,
               std::vector<index_t> const& idx)
     : accepted(a), redirect(id), applied(app), indices(idx) {}
+  bool successful() const {
+    return !indices.empty() &&
+      std::find(indices.begin(), indices.end(), 0) == indices.end();
+  }
 };
 
 inline std::ostream& operator<< (std::ostream& o, write_ret_t const& w) {
