@@ -136,6 +136,9 @@ class Supervision : public arangodb::CriticalThread {
   /// @brief Upgrade agency to supervision overhaul jobs
   void upgradeHealthRecords(VPackBuilder&);
 
+  /// @brief Check for orphaned index creations, which have been successfully built 
+  void readyOrphanedIndexCreations();
+
   /// @brief Check for inconsistencies in replication factor vs dbs entries
   void enforceReplication();
 
